Ajuste login secretaria
Foi retirado o cadastro de secretaria e colocado direto no código o cadastro de uma secretaria.

--- a/Pacote_Download/Projeto_Seminário/login/login_secretaria/login_secretaria.html
+++ b/Pacote_Download/Projeto_Seminário/login/login_secretaria/login_secretaria.html
@@ -47,9 +47,9 @@
                
                 <input type="submit" class="btn" id="submit" name="submit" value="Login">
                 </form>
-        <div class="login-register">
+        <!-- <div class="login-register">
             <p>Não tem uma conta?<a href="../../cadastro_secretaria/cad_secretaria.php" class="register-link">  Cadastra-se.</a></p>
-        </div>
+        </div> -->
         
         </div>
     </div>
