--- a/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/pagina_inicial.html
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/pagina_inicial.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>Bem vindo a área da secretaria!</h3>
-    <p>Aqui você poderá editar os dados da sua instituição de ensino, cadastrar e editar professores, alunos, cursos, matérias e turmas. Além de poder matricular professores e alunos em suas respectivas turmas.</p>
+    <p>Aqui você poderá editar os dados da sua instituição de ensino, cadastrar e editar professores, alunos, cursos, matérias e turmas. Além de poder alocar professores e matricular alunos em suas respectivas turmas.</p>
     <p>Fique a vontade para explorar todas as funcionalidades!</p>
 </body>
 </html>
