--- a/Pacote_Download/Projeto_Seminário/login/login_aluno/login_aluno.html
+++ b/Pacote_Download/Projeto_Seminário/login/login_aluno/login_aluno.html
@@ -1,11 +1,13 @@
+<!-- Página de login do aluno -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login</title>
-    <link rel="stylesheet" href="styleAluno.css"> <!--Link css-->
+    <title>Login aluno</title>
+    <link rel="stylesheet" href="styleAluno.css"> 
     <link rel="icon" type="image/x-icon" href="../../images/logo_completo.png"> <!--Coloca o logo no topo da guia da página-->
 </head>
 <body>
