--- a/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/pagina_inicial.html
+++ b/Pacote_Download/Projeto_Seminário/page_secretaria/secretaria/pagina_inicial.html
@@ -1,9 +1,13 @@
+<!-- IFRAME DO MENU DA PAGINA INICIAL NA PAGINA DA SECRETARIA -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página inicial</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/x-icon" href="../../images/UniSGE-removebg-preview.png"> <!--Coloca o logo no topo da guia da página-->
 </head>
 <body>
     <h3>Bem vindo a área da secretaria!</h3>
