--- a/Pacote_Download/Projeto_Seminário/login/login_aluno/login_aluno.html
+++ b/Pacote_Download/Projeto_Seminário/login/login_aluno/login_aluno.html
@@ -15,8 +15,8 @@
         <img src="../../images/UniSGE.png" alt="Logo" class="logo">
         
         <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="../../home.php">Área de login</a>
+            <a href="../../index.html">Home</a>
+            <a href="../../area_login.php">Área de login</a>
             <a href="../login_secretaria/login_secretaria.html">Área da secretaria</a>
             <a href="../login_professor/login_professor.html">Área do professor</a>
             <button onclick="location.href='login_aluno.html'" class="btnLogin-popup">Aluno</button>
