--- a/Pacote_Download/Projeto_Seminário/login/login_professor/login_professor.html
+++ b/Pacote_Download/Projeto_Seminário/login/login_professor/login_professor.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login</title>
+    <title>Login professor</title>
     <link rel="stylesheet" href="style.css"> <!--Link css-->
     <link rel="icon" type="image/x-icon" href="../../images/logo_completo.png"> <!--Coloca o logo no topo da guia da página-->
 </head>
@@ -17,8 +17,8 @@
     
         
         <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="../../home.php">Área de login</a>
+            <a href="../../index.html">Home</a>
+            <a href="../../area_login.php">Área de login</a>
             <a href="../login_secretaria/login_secretaria.html">Área da secretaria</a>
             <a href="../login_aluno/login_aluno.html">Área do aluno</a>
             <button onclick="location.href='login_professor.html'" class="btnLogin-popup">Professor</button>
